# SHamalgam

./: .gitignore  CMakeLists.txt  README.md
Amalgam/include/platform/linux/: Platform.h  Psapi.h  TlHelp32.h  Windows.h  d3d9.h  intrin.h  windows.h
Amalgam/include/platform/linux/MinHook/: MinHook.h
Amalgam/src/Core/: Core.cpp
Amalgam/src/Features/Binds/: Binds.cpp
Amalgam/src/Features/Configs/: Configs.cpp
Amalgam/src/Features/ImGui/: Render.cpp  Render.h
Amalgam/src/Hooks/: CClientModeShared_DoPostScreenSpaceEffects.cpp  COPRenderSprites_Render.cpp  CStaticPropMgr_DrawStaticProps.cpp  CViewRender_DrawUnderwaterOverlay.cpp  CViewRender_PerformScreenOverlay.cpp
Amalgam/src/Platform/Linux/: Entry.cpp  MinHook.cpp  Module.cpp  RenderStub.cpp
Amalgam/src/SDK/: Vars.h
Amalgam/src/SDK/Definitions/: Interfaces.h  NullInterfaces.cpp
Amalgam/src/SDK/Definitions/Interfaces/: CClientState.h  CCollisionBSPData.h  CGlobalVarsBase.h  CStaticPropMgr.h  CTFGCClientSystem.h  CTFPartyClient.h  CThirdPersonManager.h  IInput.h  IMoveHelper.h  IUniformRandomStream.h  IViewRender.h  ViewRenderBeams.h  WorldBrushData.h
Amalgam/src/SDK/Definitions/Main/: ihandleentity.h
Amalgam/src/SDK/Definitions/Misc/: CUtlBlockMemory.h  bitbuf.h
Amalgam/src/Utils/ExceptionHandler/: ExceptionHandler.cpp
Amalgam/src/Utils/Hooks/: Hooks.cpp  Hooks.h
Amalgam/src/Utils/Interfaces/: Interfaces.h
Amalgam/src/Utils/Memory/: Memory.cpp  Memory.h
Amalgam/src/Utils/Signatures/: Signatures.cpp  Signatures.h
tools/: linux_signature_audit.py
